--- a/src/Voice_Auth/accounts/templates/accounts/index.html
+++ b/src/Voice_Auth/accounts/templates/accounts/index.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 
 {% block title %}Username{% endblock %}
 {% block body %}
+<h3>{% trans "Index" %}</h3>
 
-<h3>Index</h3>
 {% if request.user.is_authenticated %}
-<p class="lead"> To logout click <a href="{% url 'accounts:logout_page' %}">here</a>.</p>
+<p class="lead"> {% trans 'To logout click' %} <a href="{% url 'accounts:logout_page' %}">{% trans 'here'%}</a>.</p>
 
 {% else %}
-<p class="lead"> To login click <a href="{% url 'accounts:enter-usr' %}">here</a>.</p>
+<p class="lead">{% trans 'To login click' %} <a href="{% url 'accounts:enter-usr' %}">{% trans 'here'%}</a>.</p>
 {% endif %}
+
 {% endblock %}
