--- a/src/Voice_Auth/accounts/templates/accounts/logout-page.html
+++ b/src/Voice_Auth/accounts/templates/accounts/logout-page.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}Logout{% endblock %}
+{% block title %}{% trans 'Logout' %}{% endblock %}
 
 {% block body %}
 {% if request.user.is_authenticated %}
-    <p class="header">Do you want to logout ?</p>
+    <p class="header">{% trans 'Do you want to logout ?' %}'</p>
     <!-- <p class="lead">To create a new user you must logout.</p> -->
     <form class="form" action="{% url 'accounts:logout' %}">
-        <button type="submit" class='btn mr-2'>Yes</button>
-        <a href="{% url 'accounts:index' %}" class='btn btn-outline-secondary follow-btn'>No</a>
+        <button type="submit" class='btn mr-2'>{% trans 'Yes' %}</button>
+        <a href="{% url 'accounts:index' %}" class='btn btn-outline-secondary follow-btn'>{% trans 'No' %}</a>
     </form>
 {% else %}
-    <p class="header">Do you want to <a href="{% url 'accounts:login'%}">login</a> ?</p>
+    <p class="header">{% trans 'Do you want to'%} <a href="{% url 'accounts:login'%}">{% trans 'login'%}</a> ?</p>
 {% endif %}
 {% endblock %}
