--- a/src/Voice_Auth/accounts/templates/accounts/index.html
+++ b/src/Voice_Auth/accounts/templates/accounts/index.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}Username{% endblock %}
+{% block title %}{% trans 'Username' %}{% endblock %}
 {% block body %}
 <h3>{% trans "Index" %}</h3>
-
 {% if request.user.is_authenticated %}
 <p class="lead"> {% trans 'To logout click' %} <a href="{% url 'accounts:logout_page' %}">{% trans 'here'%}</a>.</p>
 
