--- a/src/Voice_Auth/accounts/templates/accounts/enter-un.html
+++ b/src/Voice_Auth/accounts/templates/accounts/enter-un.html
@@ -8,6 +8,13 @@
      {% if error_message %}
       <p>{% blocktrans %}{{ error_message }}{% endblocktrans %}</p>
       {%endif%}
+      {% if form.errors %}
+           {% for error in form.non_field_errors %}
+               <div class="alert alert-danger">
+                   <strong>{{ error|escape }}</strong>
+               </div>
+               {%endfor%}
+       {% endif %}
      <form method="post" enctype="multipart/form-data">
        {% csrf_token %}
        <!-- {{ form|crispy }} -->
