--- a/src/Voice_Auth/templates/registration/register.html
+++ b/src/Voice_Auth/templates/registration/register.html
@@ -5,19 +5,74 @@
 <div class="card" >
    <div class="card-body">
      <h4 class="card-title text-center">Register</h4><br />
-     {% if error_message %}
-      <p>{{ error_message }}</p>
-      {%endif%}
-      {% if form.errors %}
-           {% for error in form.non_field_errors %}
-               <div class="alert alert-danger">
-                   <strong>{{ error|escape }}</strong>
-               </div>
-               {%endfor%}
-       {% endif %}
+
      <form method="post" enctype="multipart/form-data">
+         {% if error_message %}
+          <p>{{ error_message }}</p>
+          {%endif%}
+          {% if form.errors %}
+               {% for error in form.non_field_errors %}
+                   <div class="alert alert-danger">
+                       <strong>{{ error|escape }}</strong>
+                   </div>
+                   {%endfor%}
+           {% endif %}
        {% csrf_token %}
-       {{ form|crispy }}
+       <div class="form-group iclass">
+           <label class="iclass" for="un">{% trans 'Username' %}</label>
+           <input class="form-control" id="un" maxlength="30" name="{{ form.username.html_name }}" placeholder="" type="text" />
+           {% if form.username.errors%}
+               <div class="alert alert-danger">
+                   <strong>{{ form.username.errors|escape }}</strong>
+               </div>
+           {% endif %}
+       </div>
+       <div class="form-group iclass">
+           <label class="iclass" for="un">Email</label>
+           <input class="form-control" id="un" maxlength="30" name="{{ form.email.html_name }}" placeholder="" type="email" />
+           {% if form.email.errors%}
+               <div class="alert alert-danger">
+                   <strong>{{ form.email.errors|escape }}</strong>
+               </div>
+           {% endif %}
+       </div>
+       {{ form.question1 | as_crispy_field }}
+       <div class="form-group iclass">
+           <label class="iclass" for="pw">{{ form.answer1.label_tag }}</label>
+           <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" " type="text" readonly/><br>
+           <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">Record</button>
+           <!-- <p id="instructions">Press the Start button</p> -->
+           {% if form.answer1.errors%}
+               <div class="alert alert-danger">
+                   <strong>{{ form.answer1.errors|escape }}</strong>
+               </div>
+           {% endif %}
+       </div>
+       {{ form.question2 | as_crispy_field }}
+       <div class="form-group iclass">
+           <label class="iclass" for="pw">{{ form.answer2.label_tag }}</label>
+           <input class="form-control" id="ans2" maxlength="30" name="{{ form.answer2.html_name }}" placeholder=" " type="text" readonly/><br>
+           <button class="btn submit-btn" type="button"  id="start-btn2"  name="button">Record</button>
+           <!-- <p id="instructions">Press the Start button</p> -->
+           {% if form.answer2.errors%}
+               <div class="alert alert-danger">
+                   <strong>{{ form.answer2.errors|escape }}</strong>
+               </div>
+           {% endif %}
+       </div>
+       <div class="form-group iclass">
+           <label class="iclass" for="pw">{{ form.password1.label_tag }}</label>
+           <input class="form-control" id="pw" maxlength="30" name="{{ form.password1.html_name }}" placeholder=" " type="password" />
+       </div>
+       <div class="form-group iclass">
+           <label class="iclass" for="pw">{{ form.password2.label_tag }}</label>
+           <input class="form-control" id="pw" maxlength="30" name="{{ form.password2.html_name }}" placeholder=" " type="password" />
+       </div>
+       {% if form.password2.errors%}
+           <div class="alert alert-danger">
+               <strong>{{ form.password2.errors|escape }}</strong>
+           </div>
+       {% endif %}
        <div class="form-group text-center">
            <button type="submit" class="btn submit-btn">Submit</button>
        </div>
