--- a/src/Voice_Auth/templates/registration/login.html
+++ b/src/Voice_Auth/templates/registration/login.html
@@ -4,13 +4,13 @@
 {% block body %}
 <div class="card" >
    <div class="card-body">
-     <h4 class="card-title text-center">Login</h4><br />
-    <label class="iclass">Question 1</label><br>
+     <h4 class="card-title text-center">{% trans 'Login' %}</h4><br />
+    <label class="iclass">{% trans 'Question 1' %}</label><br>
       <audio controls>
         <source src="{{ link1 }}" type="audio/mpeg">
-        Your browser does not support the audio element.
+        {% trans 'Your browser does not support the audio element.' %}
     </audio><br/><br>
-    <label class="iclass">Question 2</label><br>
+    <label class="iclass">{% trans 'Question 2' %}</label><br>
     <audio controls>
       <source src="{{ link2 }}" type="audio/mpeg">
       Your browser does not support the audio element.
@@ -27,13 +27,13 @@
                 {%endfor%}
         {% endif %}
        <div class="form-group iclass">
-           <label class="iclass" for="un">{% trans 'Username' %}</label>
+           <label class="iclass" for="un">{{ form.username.label_tag }}</label>
            <input class="form-control" id="un" maxlength="30" name="{{ form.username.html_name }}" placeholder="" type="text" value="{{user.username}}"/>
        </div>
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.answer1.label_tag }}</label>
            <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">Record</button>
+           <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">{% trans 'Record' %}</button>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer1.errors%}
 
@@ -45,7 +45,7 @@
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.answer2.label_tag }}</label>
            <input class="form-control" id="ans2" maxlength="30" name="{{ form.answer2.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn2"  name="button">Record</button>
+           <button class="btn submit-btn" type="button"  id="start-btn2"  name="button">{% trans 'Record' %}</button>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer2.errors%}
            <div class="alert alert-danger">
@@ -58,7 +58,7 @@
            <input class="form-control" id="pw" maxlength="30" name="{{ form.password.html_name }}" placeholder=" " type="password" />
        </div>
        <div class="form-group text-center">
-           <button type="submit" class="btn submit-btn">Login</button>
+           <button type="submit" class="btn submit-btn">{% trans 'Login' %}</button>
        </div>
 
      </form>
