--- a/src/Voice_Auth/templates/registration/register.html
+++ b/src/Voice_Auth/templates/registration/register.html
@@ -4,7 +4,7 @@
 {% block body %}
 <div class="card" >
    <div class="card-body">
-     <h4 class="card-title text-center">Register</h4><br />
+     <h4 class="card-title text-center">{% trans 'Register' %}</h4><br />
 
      <form method="post" enctype="multipart/form-data">
          {% if error_message %}
@@ -19,7 +19,7 @@
            {% endif %}
        {% csrf_token %}
        <div class="form-group iclass">
-           <label class="iclass" for="un">{% trans 'Username' %}</label>
+           <label class="iclass" for="un">{{form.username.label_tag}}</label>
            <input class="form-control" id="un" maxlength="30" name="{{ form.username.html_name }}" placeholder="" type="text" />
            {% if form.username.errors%}
                <div class="alert alert-danger">
@@ -28,7 +28,7 @@
            {% endif %}
        </div>
        <div class="form-group iclass">
-           <label class="iclass" for="un">Email</label>
+           <label class="iclass" for="un">{{form.email.label_tag}}</label>
            <input class="form-control" id="un" maxlength="30" name="{{ form.email.html_name }}" placeholder="" type="email" />
            {% if form.email.errors%}
                <div class="alert alert-danger">
@@ -40,7 +40,7 @@
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.answer1.label_tag }}</label>
            <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">Record</button>
+           <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">{%trans 'Record' %}</button>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer1.errors%}
                <div class="alert alert-danger">
@@ -52,7 +52,7 @@
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.answer2.label_tag }}</label>
            <input class="form-control" id="ans2" maxlength="30" name="{{ form.answer2.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn2"  name="button">Record</button>
+           <button class="btn submit-btn" type="button"  id="start-btn2"  name="button">{%trans 'Record' %}</button>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer2.errors%}
                <div class="alert alert-danger">
@@ -74,7 +74,7 @@
            </div>
        {% endif %}
        <div class="form-group text-center">
-           <button type="submit" class="btn submit-btn">Submit</button>
+           <button type="submit" class="btn submit-btn">{%trans 'Submit' %}</button>
        </div>
      </form>
    </div>
