--- a/src/Voice_Auth/accounts/templates/accounts/enter-un.html
+++ b/src/Voice_Auth/accounts/templates/accounts/enter-un.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% block title %}{% trans 'Enter-Username' %}{% endblock %}
 {% load crispy_forms_tags %}
 {% block body %}
+{% if request.user.is_authenticated %}
+    <h4 class="text-center">{% trans 'Enter your Username to Proceed to Login'%}</h4><br />
+    <p class="lead">{% trans 'You need to logout to access this page.' %}</p><br>
+    <p class="lead"> {% trans 'To logout click' %} <a href="{% url 'accounts:logout_page' %}">{% trans 'here'%}</a>.</p>
+{% else %}
 <div class="card" >
    <div class="card-body">
      <h4 class="card-title text-center">{% trans 'Enter your Username to Proceed to Login'%}</h4><br />
@@ -33,4 +39,5 @@
      </form>
    </div>
  </div>
+{% endif %}
 {%endblock%}
