--- a/src/Voice_Auth/templates/registration/login.html
+++ b/src/Voice_Auth/templates/registration/login.html
@@ -134,6 +134,8 @@
                     success: function (data) {
                       if (data.success) {
                         alert(data.text);
+                      }else{
+                         alert("Could not recognise");
                       }
                     }
                 });
