Audio saved, stt and UI changes

--- a/src/Voice_Auth/templates/registration/login.html
+++ b/src/Voice_Auth/templates/registration/login.html
@@ -11,38 +11,6 @@
 <div class="card" >
    <div class="card-body">
      <h4 class="card-title text-center">{% trans 'Login' %}</h4><br />
-     <div class="row">
-         <div class = "col-md-6">
-             <label class="iclass">{% trans 'Question 1' %}</label><br>
-               <audio controls>
-                 <source src="{{ link1 }}" type="audio/mpeg">
-                 {% trans 'Your browser does not support the audio element.' %}
-             </audio><br/><br>
-        </div>
-        <div class = "col-md-6">
-            <label class="iclass">{% trans 'Question 2' %}</label><br>
-              <audio controls>
-                <source src="{{ link2 }}" type="audio/mpeg">
-                {% trans 'Your browser does not support the audio element.' %}
-            </audio><br/><br>
-        </div>
-    </div>
-    <div class="row">
-        <div class = "col-md-6">
-            <label class="iclass">{% trans 'Question 3' %}</label><br>
-              <audio controls>
-                <source src="{{ link3 }}" type="audio/mpeg">
-                {% trans 'Your browser does not support the audio element.' %}
-            </audio><br/><br>
-       </div>
-       <div class = "col-md-6">
-           <label class="iclass">{% trans 'Question 4' %}</label><br>
-             <audio controls>
-               <source src="{{ link4 }}" type="audio/mpeg">
-               {% trans 'Your browser does not support the audio element.' %}
-           </audio><br/><br>
-       </div>
-    </div>
      <form  method="post" enctype="multipart/form-data">
        {% csrf_token %}
        <!-- {{ form|crispy }} -->
@@ -60,10 +28,17 @@
            <input class="form-control" id="un" maxlength="30" name="{{ form.username.html_name }}" placeholder="" type="text" value="{{user.username}}" readonly/>
        </div>
        <div class="form-group iclass">
+           <label class="iclass">{% trans 'Question 1' %}</label><br>
+             <audio controls>
+               <source src="{{ link1 }}" type="audio/mpeg">
+               {% trans 'Your browser does not support the audio element.' %}
+           </audio><br/><br>
            <label class="iclass" for="pw">{{ form.answer1.label_tag }}</label>
            <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">{% trans 'Record' %}</button>
-           <!-- <p id="instructions">Press the Start button</p> -->
+           <div class="mb-5" id="controls">
+               <button class="btn submit-btn mr-2" type="button"  id="start-btn1"  name="button">{% trans 'Record' %}</button>
+               <button class="btn submit-btn" type="button"  id="stop-btn1"  name="button" disabled>{% trans 'Stop' %}</button>
+          </div>
            {% if form.answer1.errors%}
 
            <div class="alert alert-danger">
@@ -72,9 +47,17 @@
            {% endif %}
        </div>
        <div class="form-group iclass">
+           <label class="iclass">{% trans 'Question 2' %}</label><br>
+             <audio controls>
+               <source src="{{ link2 }}" type="audio/mpeg">
+               {% trans 'Your browser does not support the audio element.' %}
+           </audio><br/><br>
            <label class="iclass" for="pw">{{ form.answer2.label_tag }}</label>
            <input class="form-control" id="ans2" maxlength="30" name="{{ form.answer2.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn2"  name="button">{% trans 'Record' %}</button>
+           <div class="mb-5" id="controls">
+               <button class="btn submit-btn mr-2" type="button"  id="start-btn2"  name="button">{% trans 'Record' %}</button>
+               <button class="btn submit-btn" type="button"  id="stop-btn2"  name="button" disabled>{% trans 'Stop' %}</button>
+          </div>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer2.errors%}
            <div class="alert alert-danger">
@@ -83,9 +66,17 @@
            {% endif %}
        </div>
        <div class="form-group iclass">
+           <label class="iclass">{% trans 'Question 3' %}</label><br>
+             <audio controls>
+               <source src="{{ link3 }}" type="audio/mpeg">
+               {% trans 'Your browser does not support the audio element.' %}
+           </audio><br/><br>
            <label class="iclass" for="pw">{{ form.answer3.label_tag }}</label>
            <input class="form-control" id="ans3" maxlength="30" name="{{ form.answer3.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn3"  name="button">{% trans 'Record' %}</button>
+           <div class="mb-5" id="controls">
+               <button class="btn submit-btn mr-2" type="button"  id="start-btn3"  name="button">{% trans 'Record' %}</button>
+               <button class="btn submit-btn" type="button"  id="stop-btn3"  name="button" disabled>{% trans 'Stop' %}</button>
+          </div>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer3.errors%}
 
@@ -95,9 +86,17 @@
            {% endif %}
        </div>
        <div class="form-group iclass">
+           <label class="iclass">{% trans 'Question 4' %}</label><br>
+             <audio controls>
+               <source src="{{ link4 }}" type="audio/mpeg">
+               {% trans 'Your browser does not support the audio element.' %}
+           </audio><br/><br>
            <label class="iclass" for="pw">{{ form.answer4.label_tag }}</label>
            <input class="form-control" id="ans4" maxlength="30" name="{{ form.answer4.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn4"  name="button">{% trans 'Record' %}</button>
+           <div id="controls">
+               <button class="btn submit-btn mr-2" type="button"  id="start-btn4"  name="button">{% trans 'Record' %}</button>
+               <button class="btn submit-btn" type="button"  id="stop-btn4"  name="button" disabled>{% trans 'Stop' %}</button>
+          </div>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer4.errors%}
 
@@ -119,27 +118,3 @@
  </div>
 {%endif%}
 {%endblock%}
-{% block javascript %}
-    <script>
-        $(document).ready(function() {
-            $("#start-btn1").click(function () {
-                $("#ans1").val('success');
-                $.ajax({
-                    url: '/ajax/stt_ans/',
-                    data: {
-                      'username' : $('#un').val() ,
-                      'no_': '1'
-                    },
-                    dataType: 'json',
-                    success: function (data) {
-                      if (data.success) {
-                        alert(data.text);
-                      }else{
-                         alert("Could not recognise");
-                      }
-                    }
-                });
-            });
-        });
-    </script>
-{% endblock %}
