Script for login and reg. Txt files for dev and test

--- a/src/Voice_Auth/templates/registration/login.html
+++ b/src/Voice_Auth/templates/registration/login.html
@@ -118,3 +118,4 @@
  </div>
 {%endif%}
 {%endblock%}
+{% block javascript %} <script>{% include 'snippets/script_login.js' %}</script> {% endblock %}
