--- a/src/Voice_Auth/templates/registration/register.html
+++ b/src/Voice_Auth/templates/registration/register.html
@@ -35,7 +35,7 @@
        </div>
        <div class="form-group iclass">
            <label class="iclass" for="un">{{form.email.label_tag}}</label>
-           <input class="form-control" id="un" maxlength="30" name="{{ form.email.html_name }}" placeholder="" type="email" />
+           <input class="form-control" id="em" maxlength="30" name="{{ form.email.html_name }}" placeholder="" type="email" />
            {% if form.email.errors%}
                <div class="alert alert-danger">
                    <strong>{{ form.email.errors|escape }}</strong>
@@ -46,7 +46,10 @@
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.answer1.label_tag }}</label>
            <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">{%trans 'Record' %}</button>
+           <div class="mb-5" id="controls">
+               <button class="btn submit-btn mr-2" type="button"  id="start-btn1"  name="button">{% trans 'Record' %}</button>
+               <button class="btn submit-btn" type="button"  id="stop-btn1"  name="button" disabled>{% trans 'Stop' %}</button>
+          </div>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer1.errors%}
                <div class="alert alert-danger">
@@ -58,7 +61,10 @@
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.answer2.label_tag }}</label>
            <input class="form-control" id="ans2" maxlength="30" name="{{ form.answer2.html_name }}" placeholder=" " type="text" readonly/><br>
-           <button class="btn submit-btn" type="button"  id="start-btn2"  name="button">{%trans 'Record' %}</button>
+           <div class="mb-5" id="controls">
+               <button class="btn submit-btn mr-2" type="button"  id="start-btn2"  name="button">{% trans 'Record' %}</button>
+               <button class="btn submit-btn" type="button"  id="stop-btn2"  name="button" disabled>{% trans 'Stop' %}</button>
+          </div>
            <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer2.errors%}
                <div class="alert alert-danger">
@@ -68,11 +74,11 @@
        </div>
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.password1.label_tag }}</label>
-           <input class="form-control" id="pw" maxlength="30" name="{{ form.password1.html_name }}" placeholder=" " type="password" />
+           <input class="form-control" id="pw1" maxlength="30" name="{{ form.password1.html_name }}" placeholder=" " type="password" />
        </div>
        <div class="form-group iclass">
            <label class="iclass" for="pw">{{ form.password2.label_tag }}</label>
-           <input class="form-control" id="pw" maxlength="30" name="{{ form.password2.html_name }}" placeholder=" " type="password" />
+           <input class="form-control" id="pw2" maxlength="30" name="{{ form.password2.html_name }}" placeholder=" " type="password" />
        </div>
        {% if form.password2.errors%}
            <div class="alert alert-danger">
@@ -87,3 +93,4 @@
  </div>
 {% endif %}
 {%endblock%}
+{% block javascript %} <script>{% include 'snippets/script_reg.js' %}</script> {% endblock %}
