--- a/src/Voice_Auth/templates/registration/login.html
+++ b/src/Voice_Auth/templates/registration/login.html
@@ -63,7 +63,9 @@
            <label class="iclass" for="pw">{{ form.answer1.label_tag }}</label>
            <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" " type="text" readonly/><br>
            <button class="btn submit-btn" type="button"  id="start-btn1"  name="button">{% trans 'Record' %}</button>
-           <!-- <p id="instructions">Press the Start button</p> -->
+		   <button id="recordButtonId" onclick="startRecording('recordButtonId','stopButtonId')">Record</button>
+		   <button id="stopButtonId" onclick="stopRecording('recordingFileName')" disabled>Stop</button>
+		   <!-- <p id="instructions">Press the Start button</p> -->
            {% if form.answer1.errors%}
 
            <div class="alert alert-danger">
@@ -120,7 +122,138 @@
 {%endif%}
 {%endblock%}
 {% block javascript %}
+	<script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
     <script>
+		//webkitURL is deprecated but nevertheless
+		URL = window.URL || window.webkitURL;
+
+		var gumStream; 						//stream from getUserMedia()
+		var rec; 							//Recorder.js object
+		var input; 							//MediaStreamAudioSourceNode we'll be recording
+
+		// shim for AudioContext when it's not avb. 
+		var AudioContext = window.AudioContext || window.webkitAudioContext;
+		var audioContext //audio context to help us record
+
+		var recordingNameGlobal="dummy";
+		var recordButton;
+		var stopButton;
+
+		function startRecording(recordButtonId,stopButtonId) {
+			console.log("recordButton clicked "+recordButtonId+" "+stopButtonId);
+			recordButton = document.getElementById(recordButtonId);
+			stopButton = document.getElementById(stopButtonId);
+			
+
+			//add events to those 2 buttons
+			//recordButton.addEventListener("click", startRecording);
+			//stopButton.addEventListener("click", stopRecording);
+
+			/*
+				Simple constraints object, for more advanced audio features see
+				https://addpipe.com/blog/audio-constraints-getusermedia/
+			*/
+			
+			var constraints = { audio: true, video:false }
+
+			/*
+				Disable the record button until we get a success or fail from getUserMedia() 
+			*/
+
+			recordButton.disabled = true;
+			stopButton.disabled = false;
+
+			/*
+				We're using the standard promise based getUserMedia() 
+				https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/getUserMedia
+			*/
+
+			navigator.mediaDevices.getUserMedia(constraints).then(function(stream) {
+				console.log("getUserMedia() success, stream created, initializing Recorder.js ...");
+
+				/*
+					create an audio context after getUserMedia is called
+					sampleRate might change after getUserMedia is called, like it does on macOS when recording through AirPods
+					the sampleRate defaults to the one set in your OS for your playback device
+
+				*/
+				audioContext = new AudioContext();
+
+				/*  assign to gumStream for later use  */
+				gumStream = stream;
+				
+				/* use the stream */
+				input = audioContext.createMediaStreamSource(stream);
+
+				/* 
+					Create the Recorder object and configure to record mono sound (1 channel)
+					Recording 2 channels  will double the file size
+				*/
+				rec = new Recorder(input,{numChannels:1})
+
+				//start the recording process
+				rec.record()
+
+				console.log("Recording started");
+
+			}).catch(function(err) {
+				//enable the record button if getUserMedia() fails
+				console.log(err);
+				recordButton.disabled = false;
+				stopButton.disabled = true;
+			});
+		}
+
+		function stopRecording(recordingName) {
+			console.log("stopButton clicked");
+			recordingNameGlobal = recordingName;
+			//disable the stop button, enable the record too allow for new recordings
+			stopButton.disabled = true;
+			recordButton.disabled = false;
+			
+			//tell the recorder to stop the recording
+			rec.stop();
+
+			//stop microphone access
+			gumStream.getAudioTracks()[0].stop();
+
+			//create the wav blob and pass it on to createDownloadLink
+			rec.exportWAV(uploadAudio);
+		}
+
+		function getCookie(name) {
+			var cookieValue = null;
+			if (document.cookie && document.cookie != '') {
+				var cookies = document.cookie.split(';');
+				for (var i = 0; i < cookies.length; i++) {
+					var cookie = cookies[i].trim();
+					// Does this cookie string begin with the name we want?
+					if (cookie.substring(0, name.length + 1) == (name + '=')) {
+						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+						break;
+					}
+				}
+			}
+			return cookieValue;
+		}
+
+		function uploadAudio(blob) {
+			var csrftoken = getCookie('csrftoken');
+			var xhttp = new XMLHttpRequest();
+			xhttp.onreadystatechange = function() {
+				if (this.readyState == 4 && this.status == 200) {
+				  console.log("audio uploaded "+this.responseText);
+				}
+			};
+			  
+			var fd = new FormData();
+			fd.append("username","ganesha");
+			fd.append("audio", blob, recordingNameGlobal+'.wav');
+			xhttp.open("POST", "", true);
+			xhttp.setRequestHeader("X-CSRFToken", csrftoken);
+			xhttp.send(fd);  
+		}
+	/*
         $(document).ready(function() {
             $("#start-btn1").click(function () {
                 $("#ans1").val('success');
@@ -141,5 +274,6 @@
                 });
             });
         });
+		*/
     </script>
 {% endblock %}
