--- a/src/Voice_Auth/templates/registration/register.html
+++ b/src/Voice_Auth/templates/registration/register.html
@@ -4,101 +4,132 @@
 {% load crispy_forms_tags %}
 {% block body %}
 {% if request.user.is_authenticated %}
-    <h4 class="text-center">{% trans 'Registration Page' %}</h4>
-    <p class="lead">{% trans 'You need to logout to access this page.' %}</p><br>
-    <p class="lead"> {% trans 'To logout click' %} <a href="{% url 'accounts:logout_page' %}">{% trans 'here'%}</a>.</p>
+<h4 class="text-center">{% trans 'Registration Page' %}</h4>
+<p class="lead">{% trans 'You need to logout to access this page.' %}</p><br>
+<p class="lead"> {% trans 'To logout click' %} <a href="{% url 'accounts:logout_page' %}">{% trans 'here'%}</a>.</p>
 {% else %}
-<div class="card" >
-   <div class="card-body">
-     <h4 class="card-title text-center">{% trans 'Register' %}</h4><br />
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title text-center">{% trans 'Register' %}</h4><br />
 
-     <form method="post" enctype="multipart/form-data">
-         {% if error_message %}
-          <p>{{ error_message }}</p>
-          {%endif%}
-          {% if form.errors %}
-               {% for error in form.non_field_errors %}
-                   <div class="alert alert-danger">
-                       <strong>{{ error|escape }}</strong>
-                   </div>
-                   {%endfor%}
-           {% endif %}
-       {% csrf_token %}
-       <div class="form-group iclass">
-           <label class="iclass" for="un">{{form.username.label_tag}}</label>
-           <input class="form-control" id="un" maxlength="30" name="{{ form.username.html_name }}" placeholder="" type="text" />
-           {% if form.username.errors%}
-               <div class="alert alert-danger">
-                   <strong>{{ form.username.errors|escape }}</strong>
-               </div>
-           {% endif %}
-       </div>
-       <div class="form-group iclass">
-           <label class="iclass" for="em">{{form.email.label_tag}}</label>
-           <input class="form-control" id="em" maxlength="30" name="{{ form.email.html_name }}" placeholder="" type="email" />
-           {% if form.email.errors%}
-               <div class="alert alert-danger">
-                   <strong>{{ form.email.errors|escape }}</strong>
-               </div>
-           {% endif %}
-       </div>
-       {{ form.question1 | as_crispy_field }}
-       <div class="form-group iclass">
-           <label class="iclass" for="ans1">{{ form.answer1.label_tag }}</label>
-           <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" " type="text" readonly/><br>
-           <div class="mb-5" id="controls">
-               <button class="btn submit-btn mr-2" type="button"  id="start-btn1"  name="button">{% trans 'Record' %}</button>
-               <button class="btn submit-btn" type="button"  id="stop-btn1"  name="button" disabled>{% trans 'Stop' %}</button>
-          </div>
-           <!-- <p id="instructions">Press the Start button</p> -->
-           {% if form.answer1.errors%}
-               <div class="alert alert-danger">
-                   <strong>{{ form.answer1.errors|escape }}</strong>
-               </div>
-           {% endif %}
-       </div>
-       {{ form.question2 | as_crispy_field }}
-       <div class="form-group iclass">
-           <label class="iclass" for="ans2">{{ form.answer2.label_tag }}</label>
-           <input class="form-control" id="ans2" maxlength="30" name="{{ form.answer2.html_name }}" placeholder=" " type="text" readonly/><br>
-           <div class="mb-5" id="controls">
-               <button class="btn submit-btn mr-2" type="button"  id="start-btn2"  name="button">{% trans 'Record' %}</button>
-               <button class="btn submit-btn" type="button"  id="stop-btn2"  name="button" disabled>{% trans 'Stop' %}</button>
-          </div>
-           <!-- <p id="instructions">Press the Start button</p> -->
-           {% if form.answer2.errors%}
-               <div class="alert alert-danger">
-                   <strong>{{ form.answer2.errors|escape }}</strong>
-               </div>
-           {% endif %}
-       </div>
-       <div class="form-group iclass">
-           <label class="iclass" for="pw1">{{ form.password1.label_tag }}</label>
-           <input class="form-control" id="pw1" maxlength="30" name="{{ form.password1.html_name }}" placeholder=" " type="text" readonly/><br>
-           <div class="mb-5" id="controls">
-               <button class="btn submit-btn mr-2" type="button"  id="start-btnpw"  name="button">{% trans 'Record' %}</button>
-               <button class="btn submit-btn" type="button"  id="stop-btnpw"  name="button" disabled>{% trans 'Stop' %}</button>
-          </div>
-       </div>
-       <div class="form-group iclass">
-           <label class="iclass" for="pw2">{{ form.password2.label_tag }}</label>
-           <input class="form-control" id="pw2" maxlength="30" name="{{ form.password2.html_name }}" placeholder=" " type="text" readonly/><br>
-           <div class="mb-5" id="controls">
-               <button class="btn submit-btn mr-2" type="button"  id="start-btncpw"  name="button">{% trans 'Record' %}</button>
-               <button class="btn submit-btn" type="button"  id="stop-btncpw"  name="button" disabled>{% trans 'Stop' %}</button>
-          </div>
-       </div>
-       {% if form.password2.errors%}
-           <div class="alert alert-danger">
-               <strong>{{ form.password2.errors|escape }}</strong>
-           </div>
-       {% endif %}
-       <div class="form-group text-center">
-           <button type="submit" class="btn submit-btn">{%trans 'Submit' %}</button>
-       </div>
-     </form>
-   </div>
- </div>
+        <form method="post" enctype="multipart/form-data">
+            {% if error_message %}
+            <p>{{ error_message }}</p>
+            {%endif%}
+            {% if form.errors %}
+            {% for error in form.non_field_errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+            {%endfor%}
+            {% endif %}
+            {% csrf_token %}
+            <div class="form-group iclass">
+                <label class="iclass" for="un">{{form.username.label_tag}}</label>
+                <input class="form-control" id="un" maxlength="30" name="{{ form.username.html_name }}" placeholder=""
+                    type="text" />
+                {% if form.username.errors%}
+                <div class="alert alert-danger">
+                    <strong>{{ form.username.errors|escape }}</strong>
+                </div>
+                {% endif %}
+            </div>
+            <div class="form-group iclass">
+                <label class="iclass" for="em">{{form.email.label_tag}}</label>
+                <input class="form-control" id="em" maxlength="30" name="{{ form.email.html_name }}" placeholder=""
+                    type="email" />
+                {% if form.email.errors%}
+                <div class="alert alert-danger">
+                    <strong>{{ form.email.errors|escape }}</strong>
+                </div>
+                {% endif %}
+            </div>
+            {{ form.question1 | as_crispy_field }}
+            <div class="form-group iclass">
+                <label class="iclass" for="ans1">{{ form.answer1.label_tag }}</label>
+                <input class="form-control" id="ans1" maxlength="30" name="{{ form.answer1.html_name }}" placeholder=" "
+                    type="text" readonly /><br>
+                <div class="mb-5" id="controls">
+                    <button class="btn submit-btn mr-2" type="button" id="start-btn1"
+                        name="button">{% trans 'Record' %}</button>
+                    <button class="btn submit-btn" type="button" id="stop-btn1" name="button"
+                        disabled>{% trans 'Stop' %}</button>
+                </div>
+                <!-- <p id="instructions">Press the Start button</p> -->
+                {% if form.answer1.errors%}
+                <div class="alert alert-danger">
+                    <strong>{{ form.answer1.errors|escape }}</strong>
+                </div>
+                {% endif %}
+            </div>
+            {{ form.question2 | as_crispy_field }}
+            <div class="form-group iclass">
+                <label class="iclass" for="ans2">{{ form.answer2.label_tag }}</label>
+                <input class="form-control" id="ans2" maxlength="30" name="{{ form.answer2.html_name }}" placeholder=" "
+                    type="text" readonly /><br>
+                <div class="mb-5" id="controls">
+                    <button class="btn submit-btn mr-2" type="button" id="start-btn2"
+                        name="button">{% trans 'Record' %}</button>
+                    <button class="btn submit-btn" type="button" id="stop-btn2" name="button"
+                        disabled>{% trans 'Stop' %}</button>
+                </div>
+                <!-- <p id="instructions">Press the Start button</p> -->
+                {% if form.answer2.errors%}
+                <div class="alert alert-danger">
+                    <strong>{{ form.answer2.errors|escape }}</strong>
+                </div>
+                {% endif %}
+            </div>
+            <div class="form-group iclass">
+                <label class="iclass" for="pw1">{{ form.password1.label_tag }}</label>
+                <input class="form-control" id="pw1" maxlength="30" name="{{ form.password1.html_name }}"
+                    placeholder=" " type="text" readonly /><br>
+                <div class="mb-5" id="controls">
+                    <button class="btn submit-btn mr-2" type="button" id="start-btnpw"
+                        name="button">{% trans 'Record' %}</button>
+                    <button class="btn submit-btn" type="button" id="stop-btnpw" name="button"
+                        disabled>{% trans 'Stop' %}</button>
+                </div>
+            </div>
+            <div class="form-group iclass">
+                <label class="iclass" for="pw2">{{ form.password2.label_tag }}</label>
+                <input class="form-control" id="pw2" maxlength="30" name="{{ form.password2.html_name }}"
+                    placeholder=" " type="text" readonly /><br>
+                <div class="mb-5" id="controls">
+                    <button class="btn submit-btn mr-2" type="button" id="start-btncpw"
+                        name="button">{% trans 'Record' %}</button>
+                    <button class="btn submit-btn" type="button" id="stop-btncpw" name="button"
+                        disabled>{% trans 'Stop' %}</button>
+                </div>
+            </div>
+
+            {% if form.password2.errors%}
+            <div class="alert alert-danger">
+                <strong>{{ form.password2.errors|escape }}</strong>
+            </div>
+            {% endif %}
+
+            <div class="form-group iclass">
+                <label class="iclass" for="pg">{{ form.paragraph.label_tag }}</label>
+                <p>{{ form.p_text }}</p>
+                <br>
+                <div class="mb-5" id="controls">
+                    <button class="btn submit-btn mr-2" type="button" id="start-btnpg"
+                        name="button">{% trans 'Record' %}</button>
+                    <button class="btn submit-btn" type="button" id="stop-btnpg" name="button"
+                        disabled>{% trans 'Stop' %}</button>
+                </div>
+            </div>
+
+            <div class="form-group text-center">
+                <button type="submit" class="btn submit-btn">{%trans 'Submit' %}</button>
+            </div>
+
+
+        </form>
+    </div>
+</div>
 {% endif %}
 {%endblock%}
-{% block javascript %} <script>{% include 'snippets/script_reg.js' %}</script> {% endblock %}
+{% block javascript %}
+<script>{% include 'snippets/script_reg.js' %}</script> {% endblock %}
