Fixed registration bug

--- a/src/Voice_Auth/templates/registration/register.html
+++ b/src/Voice_Auth/templates/registration/register.html
@@ -110,7 +110,7 @@
             {% endif %}
 
             <div class="form-group iclass">
-                <label class="iclass" for="pg">{{ form.paragraph.label_tag }}</label>
+                <label class="iclass" for="pg">{{ form.paragraph }}</label>
                 <p>{{ form.p_text }}</p>
                 <br>
                 <div class="mb-5" id="controls">
